# MyMiniRenderer

./: CMakeLists.txt  README.md  SomethingToBeginWith  example_app.cpp
collisionSystem/: CMakeLists.txt  collision.cpp
include/: Renderer.h  collider2D.h  collision.h  collisionManager.h  polygon2D.h  rect.h  rigidBody2D.h  sj.h
rigidBody/: CMakeLists.txt  Renderer.cpp  modelloader.cpp  rigidBody2D.cpp
rigidBody/test/: modelLoaderTest.cpp  modelLoaderTest2.cpp
